# gletchik-studio

./: CMakeLists.txt  Main.java  README.md  gitignore  main.cpp
include/core/: StepType.h  steptype.h
include/core/execution/: AbstractBuildController.h  AbstractProcessStep.h  IBuildController.h  IBuildStep.h  IStepRunner.h  StepRunner.h  abstractbuildcontroller.h  abstractprocessstep.h  ibuildcontroller.h  ibuildstep.h  isteprunner.h  pluginmanager.h  steprunner.h
include/core/languages/: ILanguageProvider.h  ilanguageprovider.h
include/core/languages/java/: JavaBuildController.h  JavaLanguageProvider.h  JavaSteps.h  javabuildbontroller.h  javalanguageprovider.h  javasteps.h  javasyntaxprovider.h
include/core/processes/: IProcess.h  NativeProcess.h  iprocess.h  nativeprocess.h
include/core/project/: filemanager.h  indexworker.h  projectmanager.h
include/core/syntaxanaliz/: projectindex.h  syntaxhighlighter.h  wordanalyzier.h
include/core/utils/: threadsafequeue.h  utils.h
include/gui/: customiconprovider.h  fileexplorerwidget.h  fileview.h  terminalwidget.h
include/gui/sidebar/: sidebar.h
include/gui/windows/: basewindow.h  mainwindow.h  startwindow.h
include/ui/: gshighlighter.h
resources/: app.qrc
resources/themes/: dark.qss
resources/ui/sidebar/: sidebar.ui
resources/ui/windows/: mainwindow.ui
sdk/: ibuildstep.h  ilanguageprovider.h  iprocess.h  syntaxrules.h
src/core/execution/: AbstractBuildController.cpp  AbstractProcessStep.cpp  PlaginManager.cpp  StepRunner.cpp  abstractprocessstep.cpp  steprunner.cpp
src/core/languages/java/: JavaBuildController.cpp  JavaLanguageProvider.cpp  JavaLanguageProviderr.cpp  JavaSteps.cpp  JavaSyntaxProvider.cpp  javalanguageprovider.cpp  javasteps.cpp
src/core/processes/: NativeProcess.cpp  nativeprocess.cpp
src/core/project/: FileManager.cpp  IndexWorker.cpp  ProjectManager.cpp
src/core/syntaxanaliz/: WordAnalyzier.cpp  projectindex.cpp  syntaxHighlighter.cpp
src/core/utils/: JavaParser.cpp  threadsafequeue.cpp  utils.cpp
src/gui/: CustomIconProvider.cpp  FileExplorerWidget.cpp  FileView.cpp  TerminalWidget.cpp
src/gui/sidebar/: SideBar.cpp
src/gui/windows/: BaseWindow.cpp  MainWindow.cpp  StartWindow.cpp
src/ui/: GSHighlighter.cpp  JavaParser.cpp
utils/: JavaParser.cpp  JavaParser.h  gen_uiclass.sh
